--- a/style.css
+++ b/style.css
@@ -11,9 +11,13 @@ body {
     background-color: cornflowerblue;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.selection-box , .play-area , .result {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
 }
 
 .selection-box {
@@ -21,19 +25,35 @@ body {
     background-color: white;
     height: 16vw;
     padding: 0px 25px;
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     border-radius: 10px;
+    transition: all 0.2s;
 }
 
+.hide {
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50% , -50%) scale(0.9);
+}
+.show{
+    opacity: 1;
+}
+.buttons {
+    display: flex;
+}
+.buttons button{
+    margin: 0px 5px;
+}
 button {
     background-color: cornflowerblue;
     border: none;
     margin: none;
     color: white;
-    padding: 1vw 2.5vw;
+    height: 4vw;
+    width: 9vw;
     font-size: 1.5vw;
     border-radius: 5px;
     cursor: pointer;
@@ -53,6 +73,7 @@ button:hover {
     border-bottom: 1px solid black;
     padding-bottom: 10px;
     text-align: center;
+    font-size: 3vw;
     width: 100%;
 }
 
@@ -60,7 +81,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    display: none;
+    transition: all 0.2s;
 }
 
 .play-section {
@@ -94,7 +115,7 @@ section span {
     color: #56baed;
 }
 
-.players {
+.players-div {
     display: flex;
     position: relative;
     width: 96%;
@@ -105,7 +126,7 @@ section span {
     justify-content: space-between;
 }
 
-.players span {
+.players-div span {
     height: 100%;
     width: 100%;
     border-radius: 10px;
@@ -119,7 +140,8 @@ section span {
     font-size: 2vw;
     z-index: 5;
 }
-.players .slider{
+
+.players-div .slider {
     position: absolute;
     left: 2%;
     top: 12%;
@@ -129,7 +151,8 @@ section span {
     transition: all 0.5s;
     z-index: 1;
 }
-.players .active{
+
+.players-div .active {
     color: white;
     transition: all 0.5s;
 }
@@ -143,12 +166,14 @@ section span {
     width: 30vw;
     border-radius: 10px;
     height: 13vw;
-    display: none;
     align-items: center;
+    transition: all 0.2s;
 }
-.result h1{
+
+.result h1 {
     font-size: 2.5vw;
 }
-.winner{
+
+.winner {
     color: #56baed;
 }
