--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ section span {
     margin: 5px;
     border-radius: 5px;
     background-color: white;
+    cursor: pointer;
     font-size: 6vw;
     display: flex;
     align-items: center;
